--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* grid card */
+.grid-container {
+    display: grid;
+    grid-gap: 15px; /* Adjust the gap as needed */
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr)); /* Responsive column layout */
+  }
+  
+  /* Media queries for different screen sizes */
+  @media (max-width: 600px) { 
+    .grid-container {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (min-width: 601px) and (max-width: 900px) { 
+    .grid-container {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+  
+  @media (min-width: 901px) and (max-width: 1200px) { 
+    .grid-container {
+      grid-template-columns: repeat(5, 1fr);
+    }
+  }
